fix layout on mobile

--- a/blocks/content.css
+++ b/blocks/content.css
@@ -6,4 +6,5 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
