--- a/blocks/root.css
+++ b/blocks/root.css
@@ -3,8 +3,11 @@ html {
 }
 
 .root {
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: max-content;
+  min-height: 100vh;
   touch-action: none;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,7 +26,6 @@ html {
   --on-surface: #fff;
   --zone: #2f323a;
   --zone-title: #65686e;
-  --primary: #f66f38;
   /* Цвета страницы */
   background-color: var(--surface);
   color: var(--on-surface);
